minor bug with combo of control chart and alert info

--- a/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
@@ -101,7 +101,7 @@
 
                 
         //enable popover for wiki
-        $("#WikiPopover").popover({
+         $('#ChartID@(Model.c_trigger_id)').find("#WikiPopover").popover({
             html: true,
             content: function () {
                 return $.ajax({
