fixed jumping issue with popovers

--- a/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
@@ -9,7 +9,7 @@
     <div class="card-header bg-dark text-white row">
         <h4 class="col-8">
             Alerts
-            <a class="fas fa-info-circle text-white" id="LegendPopover" href="#" data-container="body" data-toggle="popover" data-placement="bottom"></a>
+            <a class="fas fa-info-circle text-white" id="LegendPopover" data-container="body" data-toggle="popover" data-placement="bottom"></a>
             @if (ViewBag.alertGroup != "")
             {
                 <span class="badge badge-pill badge-warning">Filter on alert group: @ViewBag.alertGroup</span>
