--- a/EqUiWebUi/Areas/Alert/Views/Alert/_Details.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/_Details.cshtml
@@ -5,7 +5,7 @@
     <hr />
     <h4>
         Information about this alert (id:@Model.id)
-        <a class="fas fa-info-circle text-black-50" id="WikiPopover" href="#" data-container="body" data-toggle="popover" data-placement="bottom"></a>
+        <a class="fas fa-info-circle text-black-50" id="WikiPopover" data-container="body" data-toggle="popover" data-placement="bottom"></a>
     </h4>
     <div class="form-group">
         @Html.LabelFor(model => model.location, htmlAttributes: new { @class = "control-label col-md-2" })
