--- a/EqUiWebUi/Areas/PlcSupervisie/Views/Screenshot/ShowJpg.cshtml
+++ b/EqUiWebUi/Areas/PlcSupervisie/Views/Screenshot/ShowJpg.cshtml
@@ -2,7 +2,7 @@
     <div class="card-header bg-dark text-white">
         <h4>
             PLC overview: <strong></strong>
-            <a class="fas fa-info-circle text-white" id="LegendPopover" href="#" data-container="body" data-toggle="popover" data-placement="bottom"></a>
+            <a class="fas fa-info-circle text-white" id="LegendPopover" data-container="body" data-toggle="popover" data-placement="bottom"></a>
         </h4>
     </div>
 
