--- a/EqUiWebUi/Areas/Supervision/Views/Table/PloegRapport.cshtml
+++ b/EqUiWebUi/Areas/Supervision/Views/Table/PloegRapport.cshtml
@@ -6,8 +6,8 @@
     <div class="card-header bg-dark text-white">
         <h4>
             PloegRapport
-            <a class="fas fa-wrench text-white" id="OptionsPopover" href="#" data-toggle="popover" data-placement="bottom"></a>
-            <a class="fas fa-info-circle text-white" id="LegendPopover" href="#" data-container="body" data-toggle="popover"  data-placement="bottom"></a>
+            <a class="fas fa-wrench text-white" id="OptionsPopover" data-toggle="popover" data-placement="bottom"></a>
+            <a class="fas fa-info-circle text-white" id="LegendPopover"  data-container="body" data-toggle="popover"  data-placement="bottom"></a>
         </h4>
     </div>
     <div id="PloegRapportGridSpincontainer" style="position:relative">
