--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/_WeldgunTool.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/_WeldgunTool.cshtml
@@ -5,7 +5,7 @@
             location: <strong>@ViewBag.location</strong>
             Tool_id: <strong>@ViewBag.tool_nr</strong>
             ElectrodeNo: <strong>@ViewBag.ElectrodeNo</strong>
-            <a class="far fa-calendar-alt text-black-50" href="#" id="Datepicker"></a>
+            <a class="far fa-calendar-alt text-black-50" id="Datepicker"></a>
         </h6>
     </div>
 
