--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -5,8 +5,8 @@
     <div class="card-header bg-light">
         <h6 class="card-title text-black-50">
             Workorders
-            <a class="fas fa-wrench text-black-50" href="#" data-toggle="popover" data-placement="bottom" id="workorderOnLocationPopover"></a>
-            <a class="far fa-window-restore text-black-50" id="goToWorkordersHyperlink" href="#"></a>
+            <a class="fas fa-wrench text-black-50" data-toggle="popover" data-placement="bottom" id="workorderOnLocationPopover"></a>
+            <a class="far fa-window-restore text-black-50" id="goToWorkordersHyperlink"></a>
             <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h6>
     </div>
