--- a/EqUiWebUi/Areas/Supervision/Views/Table/Supervisie.cshtml
+++ b/EqUiWebUi/Areas/Supervision/Views/Table/Supervisie.cshtml
@@ -5,7 +5,7 @@
     <div class="card-header bg-dark text-white">
         <h4>
             Supervisie
-            <a class="fas fa-info-circle text-white" id="LegendPopover" href="#" data-container="body" data-toggle="popover" data-placement="bottom"></a>
+            <a class="fas fa-info-circle text-white" id="LegendPopover" data-container="body" data-toggle="popover" data-placement="bottom"></a>
         </h4>
     </div>
     <div id="SupervisieGridSpincontainer" style="position:relative">
