--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/CurrentTipstatus.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/CurrentTipstatus.cshtml
@@ -5,7 +5,7 @@
 <div class="card">
     <div class="card-header bg-dark text-white row">        
         <h4 class="col-8">Current electrode status
-            <a class="fas fa-info-circle text-white" id="LegendPopover" href="#" data-container="body" data-toggle="popover" data-placement="bottom"></a>
+            <a class="fas fa-info-circle text-white" id="LegendPopover" data-container="body" data-toggle="popover" data-placement="bottom"></a>
         </h4>
         @MyHtmlHelpers.IconActionLink(Url.Action("PlanTipChange"),"fab fa-stack-exchange","Plan electrode change", "Go to electrode change planning tool",classes:"")
     </div>
