made wiki available from alert legend

--- a/EqUiWebUi/Areas/Alert/Views/Alert/_Legend.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/_Legend.cshtml
@@ -28,7 +28,7 @@
     </table>
     <hr />
     <h6>Quick links</h6>
-    @MyHtmlHelpers.IconActionLink(Url.Action("Index", "L_controlLimits"), "fas fa-filter", "Go to control limits list", "Page with all control chart limits for the alert system")
-
+    <p>@MyHtmlHelpers.IconActionLink(Url.Action("Index", "c_triggers"), "far fa-bell", "Triggers list", "Page with all alert triggers")</p>
+    <p>@MyHtmlHelpers.IconActionLink(Url.Action("Index", "L_controlLimits"), "fas fa-filter", "Control limits list", "Page with all control chart limits for the alert system")</p>
 </div>
 
