--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
@@ -10,6 +10,7 @@
 <p>
     @Html.ActionLink("Create New trigger", "Edit", new { id = -1 })
 </p>
+
 @Html.Action("_List")
 
 
@@ -18,5 +19,38 @@
         //full with screen
         $("#allcontent").removeClass("body-content");
         $("#allcontent").removeClass("container");
+        
+        //subscribe to row clicked events
+        $('[data-name="c_triggers"]').mvcgrid({
+            rowClicked: function (row, data, e) {
+                //ignore clicks not on td
+                if (e.target.tagName.toUpperCase() != 'TD') {
+                    return;
+                }
+                //if row already has this class close the modal
+                if ($(row).hasClass("bg-info")) {
+                    $("#placeholder").remove();
+                    $(row).removeClass("bg-info");
+                    return;
+                }
+                //clear selected rows for this table
+                $('tr').removeClass('bg-info'); //THIS IS WRONG
+                $(row).addClass("bg-info");
+                $("#placeholder").remove(); //clear placeholder is exists
+                //add new placeholder afhter selected row
+                $(row).after('<tr id="placeholder"><td colspan="1000"><div class="card border-info"><div class="card-body" id ="placeholderPartial"></div></div></td></tr>');
+                //animation
+                $("#placeholderPartial").html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
+                //load url in placeholder
+                console.log(data);
+                $("#placeholderPartial").load('@Url.Action("_Wiki")', { c_trigger_id: data["id"] },
+                    function (responseText, textStatus, req) {
+                        if (textStatus == "error") {
+                            $("#placeholderPartial").html($("#Error", responseText).html());
+                        }
+                    }
+                );
+            }
+        });
     </script>
 }
