--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/_List.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/_List.cshtml
@@ -1,22 +1,22 @@
 ﻿@model IEnumerable<EqUiWebUi.Areas.Alert.Models.c_triggers>
 @Html.Grid(Model).Named("c_triggers").Build(columns =>
 {
-    columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Asc).Css("d-none d-lg-table-cell");
-    columns.Add(c => c.alertGroup).Titled("alertGroup");
-    columns.Add(c => c.alertType).Titled("alertType");
-    columns.Add(c => c.enabled).Titled("enabled");
-    columns.Add(c => c.discription).Titled("discription");
-    columns.Add(c => c.c_schedule.name).Titled("schedule");
-    columns.Add(c => c.ordinal).Titled("ordinal");
-    columns.Add(c => c.enableSMS).Titled("SMS");
-    columns.Add(c => c.c_smsSystem.system).Titled("SMSsystem");
-  //  columns.Add(c => c.smsOnRetrigger).Titled("smsOnRetrigger").Css("d-none d-lg-table-cell");
-    columns.Add(c => c.id)
-                .Titled("")
-                .Encoded(false)
-                .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this trigger").ToHtmlString() +
-                                 MyHtmlHelpers.IconActionLink(Url.Action("Index", "h_alert", new { c_trigger_id = c.id }), "fas fa-eye", "", "Show h_alert").ToHtmlString() +
-                                 MyHtmlHelpers.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt text-danger", "", "Delete").ToHtmlString() +
-                                 MyHtmlHelpers.IconActionLink(Url.Action("RunAlertTrigger", new { triggerID = c.id }), "fas fa-fire", "", "Test fire",classes: "JQresultTriggerBtn").ToHtmlString()
+columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Asc).Css("d-none d-lg-table-cell");
+columns.Add(c => c.alertGroup).Titled("alertGroup");
+columns.Add(c => c.alertType).Titled("alertType");
+columns.Add(c => c.enabled).Titled("enabled");
+columns.Add(c => c.discription).Titled("discription");
+columns.Add(c => c.c_schedule.name).Titled("schedule");
+columns.Add(c => c.ordinal).Titled("ordinal");
+columns.Add(c => c.enableSMS).Titled("SMS");
+columns.Add(c => c.c_smsSystem.system).Titled("SMSsystem");
+//  columns.Add(c => c.smsOnRetrigger).Titled("smsOnRetrigger").Css("d-none d-lg-table-cell");
+columns.Add(c => c)
+            .Titled("")
+            .Encoded(false)
+            .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this trigger").ToHtmlString() +
+                             MyHtmlHelpers.IconActionLink(Url.Action("Index", "h_alert", new { c_trigger_id = c.id }), "fas fa-eye", "", "Show h_alert").ToHtmlString() +
+                             MyHtmlHelpers.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt text-danger", "", "Delete").ToHtmlString() +
+                             MyHtmlHelpers.IconActionLink(Url.Action("RunAlertTrigger", new { triggerID = c.id }), "fas fa-fire", "", "Test fire",classes: "JQresultTriggerBtn").ToHtmlString() 
                 ).Filterable(false);
 }).Filterable().Sortable().Empty("Did not find anything").Css("table-hover")
