--- a/EqUiWebUi/Areas/Welding/Views/Launch/CheckDubbelPrograms.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Launch/CheckDubbelPrograms.cshtml
@@ -1,34 +1,33 @@
 ﻿
 @model IQueryable<EqUiWebUi.Areas.Welding.Models.CheckDubbelPrograms>
 @{
-    ViewBag.Title = "";
+    ViewBag.Title = "CheckDubbelPrograms";
 }
 
 
-<h2>CheckDubbelPrograms</h2>
+<h2>Check for double programs used</h2>
 
 @Html.Grid(Model).Named("CheckDubbelPrograms").Build(columns =>
 {
-    columns.Add(c => c.Name).Titled("TimerName");
-    columns.Add(c => c.SpotName).Titled("Spotname");
-    columns.Add(c => c.WeldProgram).Titled("WeldProgram");
+    columns.Add(c => c.Name).Titled("TimerName").InitialSort(GridSortOrder.Asc);
+    columns.Add(c => c.SpotName).Titled("spotName");
+    columns.Add(c => c.weldProgNo).Titled("ProgramNbr");
+    columns.Add(c => "double program is used in weldtimer!!").Titled("text");
 
 
 
 }).Css("css-classes").AppendCss("table-hover").Filterable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
-    pager.PageSizes = new Dictionary<Int32, String>
-    { { 0, "All" } };
-    //{ 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
-    pager.ShowPageSizes = true;
-    }
-    ).Sortable();
+
+}
+    ).Sortable().Css("table-hover").RowCss(model => model.Name != null ? "ani_PulseBlueRepeat" : "");
 
 @section scripts{
     <script>
-            //full with screen
-            $("#allcontent").removeClass("body-content");
-            $("#allcontent").removeClass("container");
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
     </script>
 }
+
