style cleanup tipinfo

--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipLifeExpectations.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipLifeExpectations.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="card">
-    <div class="card-header bg-primary">
+    <div class="card-header bg-dark text-white">
         <h4>TipLifeExpectations</h4>
     </div>
 
