--- a/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
@@ -5,9 +5,9 @@
         <div class="card-header bg-light">
             <h6 class="card-title">
                 <a class="fas fa-sync-alt text-black-50 ControlChartRefresh clickable" data-toggle="popover" data-placement="bottom" title="Refresh chart"></a>
-                <strong>@Model.chartname</strong> Control chart for alarmobject:
-                <strong>@Model.alarmobject.Trim()</strong>
-                <a class="fas fa-info-circle text-black-50 clickable" id="WikiPopover" data-container="body" data-toggle="popover" data-placement="bottom"  title="Show chart legend and wiki page"></a>
+                Control chart for <strong>@Model.chartname</strong>
+                alarmobject: <strong>@Model.alarmobject.Trim()</strong>
+                <a class="fas fa-info-circle text-black-50 clickable" id="WikiPopover" data-container="body" data-toggle="popover" data-placement="bottom" title="Show chart legend and wiki page"></a>
                 <a class="fas fa-wrench text-black-50 ControlChartOptionsPopover clickable" data-toggle="popover" data-placement="bottom" title="Set chart options"></a>
                 <a class="far fa-calendar-alt text-black-50 ControlChartDatepicker clickable" data-toggle="popover" data-placement="right" title="Set date time range"></a>
                 <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
